Finished fixing manjaro i3 config

--- a/manjaro/.config/polybar/config.ini
+++ b/manjaro/.config/polybar/config.ini
@@ -10,7 +10,7 @@ override-redirect = false
 bottom = false
 fixed-center = true
 width = 100%
-height = 20
+height = 16
 offset-x = 0
 offset-y = 0
 background = ${color.bg}
@@ -19,7 +19,7 @@ radius-top = 0.0
 radius-bottom = 0.0
 overline-size = 2
 overline-color = ${color.ac}
-border-bottom-size = 5
+border-bottom-size = 2
 border-color = ${color.ac}
 padding = 0
 module-margin-left = 1
@@ -27,7 +27,7 @@ module-margin-right = 1
 font-0 = "Fira Code:size=10;3"
 font-1 = "icomoon\-feather:size=11;3"
 font-2 = "xos4 Terminus:size=12;2"
-modules-left = 
+modules-left = i3
 modules-center = cpu memory network
 modules-right = filesystem date
 separator =
