One more fix for now

--- a/manjaro/.config/i3/config
+++ b/manjaro/.config/i3/config
@@ -92,22 +92,22 @@ $mod4+e exec "i3-nagbar -t warning -m 'Exit i3?' -B 'Yes' 'i3-msg exit'"
 # open sys menu
 # $scmod3+0 $ex $scr/sysmenu
 
-# Set shut down, restart and locking features
-# bindsym $mod+0 mode "$mode_system"
-# set $mode_system (l)ock, (e)xit, switch_(u)ser, (s)uspend, (h)ibernate, (r)eboot, (Shift+s)hutdown
-# mode "$mode_system" {
-#     bindsym l $ex i3exit lock, mode "default"
-#     bindsym s $ex i3exit suspend, mode "default"
-#     bindsym u $ex i3exit switch_user, mode "default"
-#     bindsym e $ex i3exit logout, mode "default"
-#     bindsym h $ex i3exit hibernate, mode "default"
-#     bindsym r $ex i3exit reboot, mode "default"
-#     bindsym Shift+s $ex i3exit shutdown, mode "default"
+Set shut down, restart and locking features
+bindsym $mod+0 mode "$mode_system"
+set $mode_system (l)ock, (e)xit, switch_(u)ser, (s)uspend, (h)ibernate, (r)eboot, (Shift+s)hutdown
+mode "$mode_system" {
+    bindsym l $ex i3exit lock, mode "default"
+    bindsym s $ex i3exit suspend, mode "default"
+    bindsym u $ex i3exit switch_user, mode "default"
+    bindsym e $ex i3exit logout, mode "default"
+    bindsym h $ex i3exit hibernate, mode "default"
+    bindsym r $ex i3exit reboot, mode "default"
+    bindsym Shift+s $ex i3exit shutdown, mode "default"
 
-#     # exit system mode: "Enter" or "Escape"
-#     bindsym Return mode "default"
-#     bindsym Escape mode "default"
-# }
+    # exit system mode: "Enter" or "Escape"
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
+}
 
 # restart polybar
 $mod4+p $ex $scr/polybarstart
