--- a/manjaro/.config/i3/config
+++ b/manjaro/.config/i3/config
@@ -92,7 +92,7 @@ $mod4+e exec "i3-nagbar -t warning -m 'Exit i3?' -B 'Yes' 'i3-msg exit'"
 # open sys menu
 # $scmod3+0 $ex $scr/sysmenu
 
-Set shut down, restart and locking features
+# Set shut down, restart and locking features
 $mod3+0 mode "$mode_system"
 set $mode_system (l)ock, (e)xit, switch_(u)ser, (s)uspend, (h)ibernate, (r)eboot, (Shift+s)hutdown
 mode "$mode_system" {
