--- a/manjaro/.config/polybar/modules.ini
+++ b/manjaro/.config/polybar/modules.ini
@@ -6,7 +6,7 @@ label = " %percentage%%"
 
 [module/date]
 type = internal/date
-time =  %I:%M %p   %m/%d
+time = " %I:%M %p   %m/%d "
 format = <label>
 label = %time%
 
@@ -142,7 +142,7 @@ accumulate-stats = true
 unknown-as-up = true
 format-connected = <ramp-signal> <label-connected>
 format-disconnected = <label-disconnected>
-label-connected = "  %downspeed:8%   %upspeed:8%"
+label-connected = " %downspeed:8%  %upspeed:8%"
 label-disconnected =  "Not Connected"
 ramp-signal-0 = 
 ramp-signal-1 = 
