--- a/manjaro/.config/polybar/modules.ini
+++ b/manjaro/.config/polybar/modules.ini
@@ -1,27 +1,3 @@
-[module/cpu]
-type = internal/cpu
-format = <label>
-format-prefix = 
-label = " %percentage%%"
-
-[module/date]
-type = internal/date
-time = " %I:%M %p   %m/%d "
-format = <label>
-label = %time%
-
-[module/filesystem]
-type = internal/fs
-mount-0 = /
-fixed-values = true
-spacing = 0
-format-mounted = <label-mounted>
-format-mounted-prefix = 
-format-unmounted = " X "
-format-unmounted-prefix = 
-label-mounted = " %percentage_used%%"
-label-unmounted = %mountpoint%: not mounted
-
 [module/i3]
 type = internal/i3
 index-sort = true
@@ -33,106 +9,43 @@ label-focused = %index%
 label-focused-foreground = ${color.bg}
 label-focused-background = ${color.fg}
 label-focused-padding = 2
-;label-unfocused = %index%
-;label-unfocused-padding = 4
 label-visible = %index%
 label-visible-padding = 2
+label-unfocused = %index%
+label-unfocused-padding = 2
 label-separator = |
 label-separator-padding = 1
 label-separator-foreground = ${color.ac}
 
+[module/cpu]
+type = internal/cpu
+format = <label>
+format-prefix = 
+label = " %percentage%%"
+
+[module/date]
+type = internal/date
+time =  %I:%M %p    %a %m/%d
+format = <label>
+label = %time%
+
+[module/filesystem]
+type = internal/fs
+mount-0 = /
+fixed-values = true
+spacing = 0
+format-mounted = <label-mounted>
+format-mounted-prefix = " "
+format-unmounted = " X "
+format-unmounted-prefix = 
+label-mounted = " %percentage_used%%"
+label-unmounted = %mountpoint%: not mounted
+
 [module/memory]
 type = internal/memory
 format = <label>
-format-prefix = 
+format-prefix = 
 label = " %mb_used% | %mb_swap_used%"
-
-[module/mpd]
-type = internal/mpd
-
-; Host where mpd is running (either ip or domain name)
-; Can also be the full path to a unix socket where mpd is running.
-;;host = 127.0.0.1
-;;port = 6600
-;;password = mysecretpassword
-
-; Seconds to sleep between progressbar/song timer sync
-; Default: 1
-interval = 2
-
-; Available tags:
-;   <label-song> (default)
-;   <label-time>
-;   <bar-progress>
-;   <toggle> - gets replaced with <icon-(pause|play)>
-;   <toggle-stop> - gets replaced with <icon-(stop|play)>
-;   <icon-random>
-;   <icon-repeat>
-;   <icon-repeatone> (deprecated)
-;   <icon-single> - Toggle playing only a single song. Replaces <icon-repeatone>
-;   <icon-consume>
-;   <icon-prev>
-;   <icon-stop>
-;   <icon-play>
-;   <icon-pause>
-;   <icon-next>
-;   <icon-seekb>
-;   <icon-seekf>
-format-online =  <label-song>  <icon-prev> <toggle> <icon-next>
-
-;format-playing = ${self.format-online}
-;format-paused = ${self.format-online}
-;format-stopped = ${self.format-online}
-
-; Available tags:
-;   <label-offline>
-;format-offline = <label-offline>
-
-; Available tokens:
-;   %artist%
-;   %album-artist%
-;   %album%
-;   %date%
-;   %title%
-; Default: %artist% - %title%
-label-song =  "%artist% - %title%"
-label-song-maxlen = 25
-label-song-ellipsis = true
-
-; Available tokens:
-;   %elapsed%
-;   %total%
-; Default: %elapsed% / %total%
-;;abel-time = %elapsed% / %total%
-
-; Available tokens:
-;   None
-label-offline = "MPD is offline"
-
-; Only applies if <icon-X> is used
-icon-play = 
-icon-pause = 
-icon-stop = 
-icon-prev = 
-icon-next = 
-icon-seekb = ⏪
-icon-seekf = ⏩
-icon-random = 🔀
-icon-repeat = 🔁
-icon-repeatone = 🔂
-icon-single = 🔂
-icon-consume = ✀
-
-; Used to display the state of random/repeat/repeatone/single
-; Only applies if <icon-[random|repeat|repeatone|single]> is used
-;;toggle-on-foreground = #ff
-;;toggle-off-foreground = #55
-
-; Only applies if <bar-progress> is used
-;;bar-progress-width = 45
-;;bar-progress-indicator = |
-;;bar-progress-fill = ─
-;;bar-progress-empty = ─
 
 [module/network]
 type = internal/network
@@ -142,106 +55,23 @@ accumulate-stats = true
 unknown-as-up = true
 format-connected = <ramp-signal> <label-connected>
 format-disconnected = <label-disconnected>
-label-connected = " %downspeed:8%  %upspeed:8%"
-label-disconnected =  "Not Connected"
-ramp-signal-0 = 
-ramp-signal-1 = 
-ramp-signal-2 = 
-ramp-signal-3 = 
-ramp-signal-4 = 
+label-connected = "  %downspeed:8%  %upspeed:8%"
+label-disconnected = 睊 "Not Connected"
+ramp-signal-0 = 
+ramp-signal-1 = 
+ramp-signal-2 = 
+ramp-signal-3 = 
+ramp-signal-4 = 
 
 [module/pulseaudio]
 type = internal/pulseaudio
 use-ui-max = true
 interval = 5
 format-volume = <ramp-volume> <label-volume>
-label-muted =  Muted
+label-muted =  Muted
 label-muted-foreground = #666
-ramp-volume-0 = 
-ramp-volume-1 = 
-ramp-volume-2 = 
-ramp-volume-3 = 
-ramp-volume-4 = 
-
-[module/temperature]
-type = internal/temperature
-
-; Seconds to sleep between updates
-; Default: 1
-interval = 0.5
-
-; Thermal zone to use
-; To list all the zone types, run 
-; $ for i in /sys/class/thermal/thermal_zone*; do echo "$i: $(<$i/type)"; done
-; Default: 0
-thermal-zone = 0
-
-; Full path of temperature sysfs path
-; Use `sensors` to find preferred temperature source, then run
-; $ for i in /sys/class/hwmon/hwmon*/temp*_input; do echo "$(<$(dirname $i)/name): $(cat ${i%_*}_label 2>/dev/null || echo $(basename ${i%_*})) $(readlink -f $i)"; done
-; to find path to desired file
-; Default reverts to thermal zone setting
-;;hwmon-path = /sys/devices/platform/coretemp.0/hwmon/hwmon2/temp1_input
-
-; Threshold temperature to display warning label (in degrees celsius)
-; Default: 80
-warn-temperature = 60
-
-; Whether or not to show units next to the temperature tokens (°C, °F)
-; Default: true
-units = true
-
-; Available tags:
-;   <label> (default)
-;   <ramp>
-format = <ramp> <label>
-
-; Available tags:
-;   <label-warn> (default)
-;   <ramp>
-format-warn = <ramp> <label-warn>
-
-; Available tokens:
-;   %temperature% (deprecated)
-;   %temperature-c%   (default, temperature in °C)
-;   %temperature-f%   (temperature in °F)
-label = %temperature-c%
-
-; Available tokens:
-;   %temperature% (deprecated)
-;   %temperature-c%   (default, temperature in °C)
-;   %temperature-f%   (temperature in °F)
-label-warn = "%temperature-c%"
-label-warn-foreground = #f00
-
-; Requires the <ramp> tag
-; The icon selection will range from 0 to `warn-temperature`
-; with the current temperature as index.
-ramp-0 = 
-ramp-1 = 
-ramp-2 = 
-ramp-3 = 
-ramp-4 = 
-;;ramp-foreground = #55
-
-[module/title]
-type = internal/xwindow
-
-; Available tags:
-;   <label> (default)
-format = <label>
-;;format-background = ${color.bg}
-;;format-foreground = ${color.ac}
-;;format-padding = 4
-
-; Available tokens:
-;   %title%
-; Default: %title%
-label = %title%
-label-maxlen = 30
-
-; Used instead of label when there is no window title
-; Available tokens:
-;   None
-;;label-empty = Arch Linux
-;;label-empty-foreground = #707880
+ramp-volume-0 = 
+ramp-volume-1 = 
+ramp-volume-2 = 
+ramp-volume-3 = 
+ramp-volume-4 = 
