--- a/manjaro/.config/polybar/user_modules.ini
+++ b/manjaro/.config/polybar/user_modules.ini
@@ -1,47 +1,46 @@
-[module/launcher]
-type = custom/text
-content = 
-content-background = ${color.ac}
-content-foreground = ${color.bg}
-content-padding = 3
-click-left = /home/efex/scripts/rofidropmenu
-click-right = /home/efex/scripts/rofioneliner
-click-middle = /home/efex/scripts/autoscriptmenu
-
 [module/dropboxstatus]
 type = custom/script
-exec = /home/efex/scripts/dropboxstatus
+exec = /home/efex/scripts/dropboxstatus.sh
 interval = 300
-click-left = /home/efex/scripts/dropboxstatus --status &
-click-right = /home/efex/scripts/dropboxsyncmenu
-click-middle = /home/efex/scripts/sysbackup
+click-left = /home/efex/scripts/dropboxstatus.sh --status &
+click-right = /home/efex/scripts/dropboxsyncmenu.sh
+click-middle = /home/efex/scripts/sysbackup.sh
 
 [module/rescuetimestatus]
 type = custom/script
-exec = /home/efex/scripts/rescuetimestatus
+exec = /home/efex/scripts/rescuetimestatus.sh
 interval = 1500
-click-left = /home/efex/scripts/rescuetimestatus --status &
+click-left = /home/efex/scripts/rescuetimestatus.sh --status &
+click-middle = /home/efex/scripts/rescuetimestatus.sh --reboot &
+click-right = /home/efex/scripts/rescuetimestatus.sh --off &
 
 [module/xfluxstatus]
 type = custom/script
-exec = /home/efex/scripts/xfluxstatus
+exec = /home/efex/scripts/xfluxstatus.sh
 interval = 1500
-click-left = /home/efex/scripts/xfluxstatus --status &
-click-right = /home/efex/scripts/xfluxstatus --reboot &
-click-middle = /home/efex/scripts/xfluxstatus --off &
+click-left = /home/efex/scripts/xfluxstatus.sh --status &
+click-right = /home/efex/scripts/xfluxstatus.sh --reboot &
+click-middle = /home/efex/scripts/xfluxstatus.sh --off &
 
 [module/sinkswitch]
 type = custom/script
-exec = /home/efex/scripts/sinkswitch
+exec = /home/efex/scripts/sinkswitch.sh
 interval = 1500
-click-left = /home/efex/scripts/sinkswitch --speakers &
-click-right = /home/efex/scripts/sinkswitch --headphones &
-click-middle = /home/efex/scripts/sinkswitch --middle &
+click-left = /home/efex/scripts/sinkswitch.sh --speakers &
+click-right = /home/efex/scripts/sinkswitch.sh --headphones &
+click-middle = /home/efex/scripts/sinkswitch.sh --middle &
 
-[module/sysmenu]
-type = custom/text
-content = 
-content-background = ${color.ac}
-content-foreground = ${color.bg}
-content-padding = 3
-click-left = /home/efex/scripts/sysmenu
+[module/cpustatus]
+type = custom/script
+exec = /home/efex/scripts/cpustatus.sh
+interval = 0.5
+
+[module/gpustatus]
+type = custom/script
+exec = /home/efex/scripts/gpustatus.sh
+interval = 0.5
+
+[module/fanstatus]
+type = custom/script
+exec = /home/efex/scripts/fanstatus.sh
+interval = 0.5
