--- a/ubuntu/.config/kitty/kitty.conf
+++ b/ubuntu/.config/kitty/kitty.conf
@@ -8,6 +8,8 @@ font_size 12
 scrollback_lines 15000
 disable_ligatures never
 
+placement_strategy center
+
 cursor #d65d0e
 cursor_text_color #f9f5d7
 
