--- a/manjaro/.config/polybar/config.ini
+++ b/manjaro/.config/polybar/config.ini
@@ -4,7 +4,7 @@ include-file = ~/.config/polybar/colors.ini
 include-file = ~/.config/polybar/modules.ini
 include-file = ~/.config/polybar/user_modules.ini
 
-[bar/adventura]
+[bar/mandelight]
 monitor-strict = false
 override-redirect = false
 bottom = false
@@ -21,12 +21,12 @@ overline-size = 2
 overline-color = ${color.ac}
 border-bottom-size = 4
 border-color = ${color.ac}
-padding = 0
+padding = 1
 module-margin-left = 1
 module-margin-right = 1
 font-0 = "Fira Code:size=10;3"
-font-1 = "icomoon\-feather:size=11;3"
-font-2 = "xos4 Terminus:size=12;2"
+font-1 = "FiraCode Nerd Font:size=14;3"
+font-2 = "TerminessTTF Nerd Font:size=12;2"
 modules-left = i3
 modules-center = cpu memory network
 modules-right = filesystem date
